--- a/helmfiles/home-automation/values/esphome/common.yaml
+++ b/helmfiles/home-automation/values/esphome/common.yaml
@@ -20,7 +20,7 @@ oauth2proxy:
   config:
     clientId: esphome
     redirectUrl: https://esphome.szymonrichert.pl/oauth2/callback
-    realmUrl: http://auth.szymonrichert.pl/realms/master
+    realmUrl: https://auth.szymonrichert.pl/realms/master
     cookieName: oauth2-authorization-cookie
     cookieDomain: esphome.szymonrichert.pl
 
