Fix wordpress blog url

--- a/helmfiles/blog/values/wordpress/common.yaml
+++ b/helmfiles/blog/values/wordpress/common.yaml
@@ -1,7 +1,7 @@
 wordpressEmail: szymon.rychu@gmail.com
 wordpressFirstName: Szymon
 wordpressLastName: Richert
-wordpressBlogName: szymonrichert.pl
+wordpressBlogName: blog.szymonrichert.pl
 wordpressScheme: https
 
 smtpHost: pro.eu.turbo-smtp.com
