Temporaryli disable influxdb in HA

--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -89,7 +89,7 @@ affinity:
       topologyKey: "kubernetes.io/hostname"
 
 influxdb:
-  enabled: falsegi
+  enabled: false
   setDefaultUser:
     enabled: true
     user:
