--- a/helmfiles/authentication/values/keycloak/raw/postgres.common.pre.yaml
+++ b/helmfiles/authentication/values/keycloak/raw/postgres.common.pre.yaml
@@ -49,7 +49,7 @@ spec:
       cpu: 500m
       memory: 500Mi
 
-  # enableLogicalBackup: true
+  enableLogicalBackup: false
   # logicalBackupSchedule: "30 00 * * *"
 
   maintenanceWindows:
