--- a/helmfiles/authentication/values/keycloak/raw/postgres.common.pre.yaml
+++ b/helmfiles/authentication/values/keycloak/raw/postgres.common.pre.yaml
@@ -38,7 +38,7 @@ spec:
 
   volume:
     size: 5Gi
-    storageClass: local-path
+    storageClass: nas-nfs
 
   enableShmVolume: true
   resources:
