--- a/helmfile.yaml
+++ b/helmfile.yaml
@@ -4,10 +4,10 @@ helmfiles:
 - path: helmfiles/backbone/helmfile.yaml
 - path: helmfiles/monitoring/helmfile.yaml
 - path: helmfiles/authentication/helmfile.yaml
-- path: helmfiles/media/helmfile.yaml
+# - path: helmfiles/media/helmfile.yaml
 - path: helmfiles/home-automation/helmfile.yaml
 - path: helmfiles/blog/helmfile.yaml
-- path: helmfiles/coding/helmfile.yaml
+# - path: helmfiles/coding/helmfile.yaml
 
 environments:
   default: {}
