--- a/helmfiles/coding/helmfile.yaml
+++ b/helmfiles/coding/helmfile.yaml
@@ -35,4 +35,7 @@ releases:
   namespace: coding
   chart: jupyterhub/jupyterhub
   version: 3.1.0
+  labels:
+    purpose: coding
+    application: jupyterhub
   <<: *default
