--- a/.github/workflows/helmfile.yaml
+++ b/.github/workflows/helmfile.yaml
@@ -23,8 +23,14 @@ jobs:
     outputs:
       changed_releases: ${{ steps.changed_releases.outputs.changed_releases }}
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
-      
+      - name: Checkout code
+        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4
+        with:
+          fetch-depth: 0
+          repository: szymonrychu/helmfile-cluster
+          token: ${{ secrets.BOT_TOKEN }}
+          submodules: recursive
+
       - name: Get all test, doc and src files that have changed
         id: changed_files
         uses: tj-actions/changed-files@25ef3926d147cd02fc7e931c1ef50772bbb0d25d # v40
