--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -25,7 +25,7 @@ jobs:
       - name: "Request review from @szymonrychu-bot"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
@@ -44,7 +44,7 @@ jobs:
       - name: "Assign @szymonrychu-bot"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
@@ -63,7 +63,7 @@ jobs:
       - name: "Approve pull request"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
@@ -78,7 +78,7 @@ jobs:
       - name: "Merge pull request"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
