--- a/.github/workflows/renovate.yml
+++ b/.github/workflows/renovate.yml
@@ -10,11 +10,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
         with:
-          token: ${{ secrets.RENOVATE_TOKEN }}
+          token: ${{ secrets.SZYMONRYCHU_BOT_TOKEN }}
       - name: Renovate
         uses: renovatebot/github-action@9c2e6e7dc5340821aa2c82094e7326895c94a435 # v39.1.3
         with:
           configurationFile: .github/renovate-config.js
-          token: ${{ secrets.RENOVATE_TOKEN }}
+          token: ${{ secrets.SZYMONRYCHU_BOT_TOKEN }}
         env:
           RENOVATE_AUTOMERGE: true
