--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -25,13 +25,13 @@ jobs:
       - name: "Request review from @szymonrychu-bot"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
 
             const reviewers = [
-              "szymonrychu-bot",
+              "szymonrychu",
             ]
 
             await github.rest.pulls.requestReviewers({
@@ -44,13 +44,13 @@ jobs:
       - name: "Assign @szymonrychu-bot"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
 
             const assignees = [
-              "szymonrychu-bot",
+              "szymonrychu",
             ]
 
             await github.rest.issues.addAssignees({
@@ -63,7 +63,7 @@ jobs:
       - name: "Approve pull request"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
@@ -78,7 +78,7 @@ jobs:
       - name: "Merge pull request"
         uses: "actions/github-script@d7906e4ad0b1822421a7e6a35d5ca353c962f410" # v6
         with:
-          github-token: "${{ secrets.SZYMONRYCHU_BOT_TOKEN }}"
+          github-token: "${{ secrets.SZYMONRYCHU_TOKEN }}"
           script: |
             const pullRequest = context.payload.workflow_run.pull_requests[0]
             const repository = context.repo
