--- a/helmfiles/backbone/values/gha-runner/common.yaml
+++ b/helmfiles/backbone/values/gha-runner/common.yaml
@@ -2,4 +2,4 @@ replicaCount: 3
 
 config:
   githubOwner: szymonrychu
-  githubRepository: helmfile-cluster
+  githubRepository: selfhosted-kubernetes-helmfile
