--- a/helmfiles/home-automation/values/home-assistant/common.yaml
+++ b/helmfiles/home-automation/values/home-assistant/common.yaml
@@ -2,6 +2,8 @@
 config:
   localVoiceProcessing:
     enabled: true
+    whisperModel: small-int8
+    whisperBeamSize: 5
   network:
     trustedProxies:
       - 0.0.0.0/0
