--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,8 @@ repos:
     - id: trailing-whitespace
     - id: end-of-file-fixer
     - id: check-yaml
+      args:
+        - --allow-multiple-documents
     - id: check-added-large-files
   - repo: https://github.com/compilerla/conventional-pre-commit
     rev: v3.0.0
