--- a/helmfiles/media/values/radarr/common.yaml
+++ b/helmfiles/media/values/radarr/common.yaml
@@ -5,14 +5,14 @@ ingress:
     cert-manager.io/cluster-issuer: letsencrypt-prod
     kubernetes.io/tls-acme: "true"
   hosts:
-    - host: sonarr.szymonrichert.pl
+    - host: radarr.szymonrichert.pl
       paths:
         - path: /
           pathType: Prefix
   tls:
-    - secretName: sonarr-tls
+    - secretName: radarr-tls
       hosts:
-        - sonarr.szymonrichert.pl
+        - radarr.szymonrichert.pl
 
 # podSecurityContext:
 #   fsGroup: 1000
@@ -31,10 +31,10 @@ resources:
 oauth2proxy:
   config:
     clientId: qbittorrent
-    redirectUrl: https://sonarr.szymonrichert.pl/oauth2/callback
+    redirectUrl: https://radarr.szymonrichert.pl/oauth2/callback
     realmUrl: https://auth.szymonrichert.pl/realms/master
     cookieName: oauth2-authorization-cookie
-    cookieDomain: sonarr.szymonrichert.pl
+    cookieDomain: radarr.szymonrichert.pl
 
 persistence:
   config:
