Stable rook-ceph controller

--- a/helmfiles/coding/values/code-server/common.yaml
+++ b/helmfiles/coding/values/code-server/common.yaml
@@ -44,12 +44,12 @@ persistence:
   config:
     enabled: true
     accessMode: ReadWriteOnce
-    storageClass: nas-nfs
+    storageClass: ceph
     size: 8Gi
     annotations: {}
   sharedData:
     enabled: true
     accessMode: ReadWriteOnce
-    storageClass: nas-nfs
+    storageClass: ceph
     size: 8Gi
     annotations: {}
